methods.picture.MethodsPicture.scala.error
Compilation error:
MethodsPicture:1: error: not found: type color
def marquer (c:color) = {setCouleurBrosse(c);baisseBrosse();leveBrosse()}
               ^MethodsPicture:10: error: too many arguments for method faireV: ()Unit
def pattern () {avance();faireV(Color.YELLOW);droite();droite();avance();faireV(Color.RED);droite();droite();avance();faireV(Color.BLUE);droite();droite();avance();faireV(Color.GREEN);gauche();avance();gauche()}
                               ^MethodsPicture:10: error: too many arguments for method faireV: ()Unit
def pattern () {avance();faireV(Color.YELLOW);droite();droite();avance();faireV(Color.RED);droite();droite();avance();faireV(Color.BLUE);droite();droite();avance();faireV(Color.GREEN);gauche();avance();gauche()}
                                                                               ^MethodsPicture:10: error: too many arguments for method faireV: ()Unit
def pattern () {avance();faireV(Color.YELLOW);droite();droite();avance();faireV(Color.RED);droite();droite();avance();faireV(Color.BLUE);droite();droite();avance();faireV(Color.GREEN);gauche();avance();gauche()}
                                                                                                                            ^MethodsPicture:10: error: too many arguments for method faireV: ()Unit
def pattern () {avance();faireV(Color.YELLOW);droite();droite();avance();faireV(Color.RED);droite();droite();avance();faireV(Color.BLUE);droite();droite();avance();faireV(Color.GREEN);gauche();avance();gauche()}
                                                                                                                                                                          ^